# kite

./: .gitignore  kite.cabal
frontend/: kite.html
frontend/assets/js/: kite.js
src/: Main.hs  Patterns.hs  Suggest.hs  Types.hs
test/: Tasty.hs
test/Unit/: Combinations.hs  Cost.hs  Suggest.hs
